--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "axios": "^1.7.7",
+    "ffmpeg-extract-frame": "^1.0.2",
     "moment": "^2.30.1",
     "notistack": "^3.0.1",
     "react": "^18.3.1",
