--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
     "react-h5-audio-player": "^3.9.3",
+    "react-pro-sidebar": "^1.1.0",
     "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.12",
