--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
     "react-h5-audio-player": "^3.9.3",
-    "react-pro-sidebar": "^1.1.0",
     "react-icons": "^5.4.0",
+    "react-pro-sidebar": "^1.1.0",
     "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.12",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -62,6 +64,7 @@
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^6.7.1",
     "@mightymeld/runtime": "^0.1.51",
+    "@types/react-slick": "^0.23.13",
     "customize-cra": "^1.0.0",
     "mightymeld": "^0.2.10",
     "react-app-rewired": "^2.2.1"
