feat: get user details using react query, config prettier

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@mui/icons-material": "^5.16.4",
     "@mui/material": "^5.16.7",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
+    "@tanstack/react-query": "^5.81.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -69,6 +70,8 @@
     "customize-cra": "^1.0.0",
     "eslint": "^8.57.1",
     "mightymeld": "^0.2.10",
+    "prettier": "^3.6.2",
+    "prettier-plugin-organize-imports": "^4.1.0",
     "react-app-rewired": "^2.2.1",
     "tsconfig-paths-webpack-plugin": "^4.2.0"
   }
